--- a/eksamens projekt/RMarkDown_Gruppe24.Rmd
+++ b/eksamens projekt/RMarkDown_Gruppe24.Rmd
@@ -69,11 +69,51 @@ for (i in 2:nrow(aarhus_data)) {
 
 
 ```{r}
-Koordinator <- read_excel(here("data","Sogn_Koordinator.xlsx"))
+Koordinator <- readxl::read_excel (here("data_fælles","Sogn_Koordinator.xlsx"))
 Aarhus_data_K <- aarhus_data
 Aarhus_data_K <-  left_join(aarhus_data, Koordinator, by = "sogn")
 ```
 
 
+
+
+```{r}
+procent_køn_erhverv <- aarhus_data %>%
+  filter(koen != "") %>% 
+  count(koen, Erhvervskategori) %>% 
+  group_by(Erhvervskategori) %>% 
+  mutate(koen_procent = (n/sum(n))*100)
+   
+procent_køn_erhverv %>% 
+  ggplot(aes(x = Erhvervskategori, y = koen_procent, fill = koen)) +
+  geom_bar(stat = "identity") + 
+  theme(axis.text.x = element_text(angle = -45, hjust = 0)) +
+  scale_fill_manual(values = c("dodgerblue", "orange")) + 
+  labs(title = "Procentfordeling af køn i erhvervskategorier",
+       fill = "Køn",
+       x = "Erhvervskategori",
+       y = "Procent")
+```
+
+
+
+```{r}
+procent_civilstand_erhverv <- aarhus_data %>% 
+  filter(civilstand != "") %>% 
+  count(civilstand, Erhvervskategori) %>% 
+  group_by(Erhvervskategori) %>% 
+  mutate(civilstand_procent = (n/sum(n))*100)
+
+procent_civilstand_erhverv %>% 
+  ggplot(aes(x = Erhvervskategori, y = civilstand_procent, fill = civilstand)) +
+  geom_bar(stat = "identity") +
+  theme(axis.text.x = element_text(angle = -45, hjust = 0)) +
+  scale_fill_manual(values = c("tomato", "orange", "green3", "yellow", "purple", "dodgerblue")) +
+  labs(title = "Procentfordeling af civilstand i erhvervskategorier",
+       fill = "Køn",
+       x = "Erhvervskategori",
+       y = "Procent")  
+
+```
 
 
